Fix trivial warnings